test/asm/use-label-outside-section.err
error: Cannot define label `lab` outside of a `SECTION`
    at use-label-outside-section.asm(1)
error: Expected constant expression: undefined symbol `lab`
    at use-label-outside-section.asm(3)
Assembly aborted with 2 errors
