test/asm/use-label-outside-section.asm
lab:
	PRINTLN DEF(lab)
	PRINTLN lab - lab
